--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -19,10 +19,14 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
-    color: #F2F2F3;
+    color: #8585AD;
     text-decoration: none;
     text-align: left;
     margin-bottom: 34px;
+}
+
+.profilePage__link:hover {
+    opacity: .8;
 }
 
 .profilePage__text {
