--- a/src/pages/FeedPage/FeedPage.module.css
+++ b/src/pages/FeedPage/FeedPage.module.css
@@ -1,17 +1,18 @@
 .feedPage__main {
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    max-width: 1240px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    justify-content: space-between;
     width: 100%;
-    justify-content: flex-start;
-    padding: 0;
+    justify-items: stretch;
+    column-gap: 60px;
+    max-width: 1240px;
+    margin: 0 auto;
 }
 
 .feedPage__title {
     margin: 40px 0 20px;
-    padding: 0;
-    max-width: 100%;
+    grid-column: 1/-1;
 }
 
 .feedPage__feeds {
@@ -21,4 +22,37 @@
     max-height: 80vh;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+.feedPage__orderInfo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, auto);
+    justify-items: stretch;
+    row-gap: 60px;
+}
+
+.feedPage__list {
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
+    max-height: 200px;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    overflow: hidden;
+    column-gap: 15px;
+}
+
+.feedPage__color {
+    color: #00CCCC;
+}
+
+.feedPage__totalDone {
+    grid-column: span 2;
+}
+
+.feedPage__todayDone {
+    grid-column: span 2;
 }
